--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 
-/* Global Styles */
+/* Global Styles Danica Desembrana*/
 
 html,
 body {
@@ -131,3 +131,62 @@ overflow: hidden;
       cursor: default;
     }
 /* Drag and drop Trisha Francisco */
+
+/*css for block selector Danica Desembrana*/
+div.clear
+{
+    clear: both;
+}
+
+div.block-chooser{
+    
+}
+
+    div.block-chooser.disabled div.block-chooser-item
+  {
+    zoom: 1;
+    filter: alpha(opacity=60);
+    opacity: 0.6;
+    cursor: default;
+  }
+
+  div.block-chooser div.block-chooser-item{
+    padding: 11px;
+    border-radius: 6px;
+    cursor: pointer;
+    position: relative;
+    border: 1px solid #efefef;
+    margin-bottom: 10px;
+        margin-left: 10px;
+        margin-right: 10x;
+  }
+  
+  div.block-chooser div.block-chooser-item.selected{
+    border: 4px solid #428bca;
+    background: #efefef;
+    padding: 8px;
+    filter: alpha(opacity=100);
+    opacity: 1;
+  }
+  
+    div.block-chooser div.block-chooser-item img{
+      padding: 0;
+    }
+    
+    div.block-chooser div.block-chooser-item span.title{
+      display: block;
+      margin: 10px 0 5px 0;
+      font-weight: bold;
+      font-size: 12px;
+    }
+    
+    div.block-chooser div.block-chooser-item span.description{
+      font-size: 12px;
+    }
+    
+    div.block-chooser div.block-chooser-item input{
+      position: absolute;
+      left: 0;
+      top: 0;
+      visibility:hidden;
+    }
