--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -182,12 +182,16 @@ optgroup {
 }
 table {
   border-spacing: 0;
-  border-collapse: collapse;
 }
 td,
 th {
   padding: 0;
 }
+td{
+  background-color: blue;
+    color: white;
+}
+
 /*! Source: https://github.com/h5bp/html5-boilerplate/blob/master/src/css/main.css */
 @media print {
   *,
