--- a/js/jquery.bootgrid.css
+++ b/js/jquery.bootgrid.css
@@ -1,3 +1,4 @@
+/*Customized: Regula Jane S.*/
 .bootgrid-header,
 .bootgrid-footer {
   margin: 15px 0;
@@ -11,7 +12,7 @@
   display: inline-block;
   margin: 0 20px 0 0;
   vertical-align: middle;
-  width: 445px;
+  width: 415px;
 }
 .bootgrid-header .search .glyphicon,
 .bootgrid-footer .search .glyphicon {
@@ -29,7 +30,7 @@
 }
 .bootgrid-header .actionBar,
 .bootgrid-footer .infoBar {
-  text-align: right;
+  text-align: left;
 }
 .bootgrid-header .actionBar .btn-group > .btn-group .dropdown-menu,
 .bootgrid-footer .infoBar .btn-group > .btn-group .dropdown-menu {
