--- a/css/bootstraplogin.css
+++ b/css/bootstraplogin.css
@@ -9,13 +9,16 @@ body
 
 .wrap
 {
-    width: 100%;
-    height: 100%;
-    min-height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 99;
+    background-color: #EDEDED;
+    padding-top: 20px;
+    padding-bottom: 60px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 15px;
+    border-color:#d2d2d2;
+    border-width: 5px;
+    box-shadow:0 1px 0 #cfcfcf;
+	color:black;
 }
 
 p.form-title
@@ -24,12 +27,15 @@ p.form-title
     font-size: 20px;
     font-weight: 600;
     text-align: center;
-    color: #FFFFFF;
+    color: #4D4D4D;
     margin-top: 5%;
     text-transform: uppercase;
     letter-spacing: 4px;
 }
-
+p.remember
+{
+	color:#4D4D4D;
+}
 form
 {
     width: 250px;
@@ -51,7 +57,7 @@ form.login input[type="text"], form.login input[type="password"]
     letter-spacing: 1px;
     margin-bottom: 5px;
     color: #FFFFFF;
-l    outline: 0;
+    outline: 0;
 }
 
 form.login input[type="submit"]
