--- a/css/bootstraplogin.css
+++ b/css/bootstraplogin.css
@@ -56,7 +56,7 @@ form.login input[type="text"], form.login input[type="password"]
     font-weight: 400;
     letter-spacing: 1px;
     margin-bottom: 5px;
-    color: #FFFFFF;
+    color: #4D4D4D;
     outline: 0;
 }
 
@@ -70,6 +70,7 @@ form.login input[type="submit"]
     outline: 0;
     cursor: pointer;
     letter-spacing: 1px;
+	color:#4D4D4D;
 }
 
 form.login input[type="submit"]:hover
@@ -181,7 +182,7 @@ form.login a:hover
     position: absolute;
     bottom: 26px;
     margin: 0 auto;
-    color: #FFF;
+    color: #4D4D4D;
     background-color: rgba(0, 0, 0, 0.66);
     padding: 10px;
     left: 45%;
