--- a/css/bootstraplogin.css
+++ b/css/bootstraplogin.css
@@ -1,15 +1,22 @@
 body
 {
-    background: url('http://megasignals.net/wp-content/uploads/2014/05/nice-pictures-for-desktop-background-8.jpg') fixed;
+    background: url('../imgs/landing.jpg') fixed;
     background-size: cover;
     padding: 0;
     margin: 0;
 	margin-top:30px; 
 }
 
+.container {
+ opacity: 0.7;
+
+}
+
 .wrap
-{
-    background-color: #EDEDED;
+{   
+
+
+    background-color: rgba(189, 189, 179, 0.8);
     padding-top: 20px;
     padding-bottom: 60px;
     padding-left: 20px;
@@ -34,16 +41,18 @@ p.form-title
 }
 p.remember
 {
-	color:#4D4D4D;
+	color:black;
 }
 form
 {
+
     width: 250px;
     margin: 0 auto;
 }
 
 form.login input[type="text"], form.login input[type="password"]
 {
+    
     width: 100%;
     margin: 0;
     padding: 5px 10px;
@@ -70,7 +79,7 @@ form.login input[type="submit"]
     outline: 0;
     cursor: pointer;
     letter-spacing: 1px;
-	color:#4D4D4D;
+	color:white;
 }
 
 form.login input[type="submit"]:hover
@@ -109,6 +118,7 @@ form.login a:hover
 
 .pr-wrap
 {
+
     width: 100%;
     height: 100%;
     min-height: 100%;
